# code_passenger

./: .gitignore  Cargo.toml  concept.md  readme.md  report.json
src/: analysis.rs  cargo.rs  cli.rs  engine.rs  error.rs  lib.rs  main.rs  model.rs  packs.rs  plans.rs  scaffolds.rs
src/analysis/: action.rs  checks.rs  lens.rs  passes.rs  produce.rs  reducer.rs  state.rs  store.rs
src/analysis/passes/: build_file_view.rs  build_totals.rs
src/packs/: rust.rs
src/packs/rust/: detectors.rs  helpers.rs
src/passenger/: command.rs  mod.rs  store.rs  types.rs
src/plans/: compact.rs  verbose.rs
