[package]
name = "code_passenger"
version = "0.1.0"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "Language-pack + header-plan driven code annotator: scans usage + auto-generates feature gates and doc headers."

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/code_passenger"
readme = "README.md"

[[bin]]
name = "code-passenger"
path = "src/main.rs"

[features]
default = ["lang_rust", "plan_verbose"]
lang_rust = []
lang_ts = []
plan_verbose = []
plan_compact = []

[dependencies]
walkdir = "2.5.0"
regex = "1.11.1"
toml_edit = "0.22"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
im = { version = "15", features = ["serde"]}

[dev-dependencies]
tempfile = "3.19.1"
